# bhamm-lab

./: .ansible-lint  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  .yamlfmt  AGENTS.md  README.md  TODO.md  ansible.cfg  flake.nix  mkdocs.yml  renovate.json  requirements.txt  secrets.enc.json  secrets.enc.yaml  shell.nix
.gitea/workflows/: ansible.yaml  demo.yaml  k3s-dev.yaml  k3s-prod.yaml  k3s.yaml  mkdocs.yaml  reuse-k3s-deploy.yaml
ansible/: debian.yml  k3s.yml  localhost.yaml  localhost.yml  main.yaml  main.yml  opnsense.yml  requirements.yml
ansible/collections/: .gitignore
ansible/inventory/: hosts  proxmox.yml
ansible/roles/: .gitignore
docker/ceph-cleanup/: Dockerfile  README.md  clean.py  hello.py  pyproject.toml
docker/docs-site/: Dockerfile  default.conf  mkdocs.yml  nginx.conf  requirements.txt
docker/example/: Dockerfile  default.conf
docs/: index.md
kubernetes/: argocd-prod.yaml  dev.yaml  minio-tenant-helm.yaml  prod-apps.yaml  prod.yaml  restore-pvc.yaml
nix/: README.md  secrets.yaml  shell.nix
plans/: framework-usb4-mesh-llama-rpc.md  garage-migration-plan.md  japan-proxmox-ceph-migration.md  method-proxmox-ceph-migration.md  nix-aarch-support.md  nixos-monitoring-plan.md  nut-client-integration.md  orangepi-sd-image.md  orangepi-zero3-backup-keepalived-vip.md  replace-node.md  seaweedfs-to-native-ceph-rgw-migration.md
python/: pyproject.toml
scripts/: docker-push.sh  restore_minio_backups.sh
terraform/: main.tf
tofu/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
tofu/gcp/: main.tf  (+5 more)
(+1229 files in other folders)
