[tool.poetry]
name = "prefect-flows"
version = "0.1.0"
description = ""
authors = ["Blake Hamm <blake.j.hamm@gmail.com>"]
readme = "README.md"
packages = [{include = "prefect_flows", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.42"
hvac = "^2.3.0"
httpx = "^0.27.2"
prefect = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
